# rget

./: .gitignore  Cargo.toml  build.ps1  build.sh
src/: main.rs
