[package]
name = "rget"
version = "0.1.0"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
indicatif = { version = "0.15.0" }
structopt = {version = "0.3.21"}
